--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,16 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
-  #   - images/a_dot_ham.jpeg
+    - assets/d.png
+    - assets/h1.png
+    - assets/logo.png
+    - assets/v.png
+    - assets/3.png
+    - assets/do.png
+    
+
+  
+  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
