--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  lottie: ^0.6.0
+  flutter_hooks: ^0.12.0
 
 dev_dependencies:
   flutter_test:
@@ -52,10 +55,15 @@ flutter:
     - assets/v.png
     - assets/3.png
     - assets/do.png
+    - assets/lottie/lottie.json
     
 
   
   
+
+    
+    
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
