--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   lottie: ^0.6.0
   flutter_hooks: ^0.12.0
+  firebase_auth: ^0.20.1
 
 dev_dependencies:
   flutter_test:
