--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   lottie: ^0.6.0
   flutter_hooks: ^0.12.0
   firebase_auth: ^0.20.1
+  flutter_barcode_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
