--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: "0.7.0"
-  cloud_firestore: "^0.16.0+1"
     
 
 
@@ -34,6 +33,8 @@ dependencies:
   lottie: ^0.6.0
   flutter_hooks: ^0.12.0
   firebase_auth: ^0.20.1
+  cloud_firestore: ^0.16.0+1
+  flutter_barcode_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
